force-app/main/default/objects/Pipeline_Snap__c/Pipeline_Snap__c.object-meta.xml
<CustomObject>
    <label>Pipeline Snap</label>
    <nameField>
        <displayFormat>PLS-{00000}</displayFormat>
        <label>Pipeline Snap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>