force-app/main/default/objects/Pipeline_Snap__c/fields/Closed_Won_Open__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Open__c</fullName>
    <label>Closed Won/Open</label>
    <length>20</length>
    <type>Text</type>
</CustomField>