force-app/main/default/objects/Pipeline_Snap__c/fields/Commit_Status__c.field-meta.xml
<CustomField>
    <fullName>Commit_Status__c</fullName>
    <label>Commit Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>