force-app/main/default/objects/Pipeline_Snap__c/fields/Next_30__c.field-meta.xml
<CustomField>
    <fullName>Next_30__c</fullName>
    <label>Next 30</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>