force-app/main/default/objects/Pipeline_Snap__c/fields/Opportunity_Owner_Division__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Division__c</fullName>
    <label>Opportunity Owner: Division</label>
    <length>30</length>
    <type>Text</type>
</CustomField>