force-app/main/default/objects/Pipeline_Snap__c/fields/Total_Saas__c.field-meta.xml
<CustomField>
    <fullName>Total_Saas__c</fullName>
    <label>Total Saas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>