force-app/main/default/objects/Pipeline_Snap__c/fields/X30_60__c.field-meta.xml
<CustomField>
    <fullName>X30_60__c</fullName>
    <label>30 - 60</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>