force-app/main/default/objects/Pipeline_Snap__c/fields/X60_90__c.field-meta.xml
<CustomField>
    <fullName>X60_90__c</fullName>
    <label>60-90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>